--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
-    "use-sound": "^4.0.1"
+    "use-sound": "^4.0.1",
+    "vertical-timeline-component-react": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
