--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"private": false,
 	"version": "0.0.0",
 	"type": "module",
+	"homepage": "https://juaneugenio.github.io/myportfolioweb/",
 	"scripts": {
+		"deploy": "gh-pages -d build",
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -11,6 +13,7 @@
 	},
 	"dependencies": {
 		"framer-motion": "^10.15.0",
+		"gh-pages": "^5.0.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
